# rag_tools

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: ci.yml
docs/ru/: api.md  index.md  metrics.md  quickstart.md
src/rag_tools/: llm_scores.py  rag_scores.py
src/rag_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_tools/api/: adapters.py  main.py  schemas.py
src/rag_tools/metrics/: llm_metrics.py
src/tests/: tests.py
tests/: test_health.py  test_llm_metrics.py  test_metrics_endpoints.py
