[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_tools"
version = "0.1.0"
description = "RAG tools + minimal API (course project)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "httpx>=0.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]